# Stocks_Notifier

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dags/: daily_stock_upload.py
market_intel/: .user.yml  dbt_project.yml  profiles.yml
market_intel/models/marts/: _mrts_modeltests.yml  mart_metrics.sql  mrts_daily_returns.sql
market_intel/models/staging/: _stg_modeltests.yml  _stg_sources.yml  stg_stock_prices.sql
market_intel/tests/: assert_all_tickers.sql  assert_high_low.sql  assert_unique_ticker_date.sql
src/: main.py
src/database/: connection.py
src/ingestion/: stocks_extract.py  stocks_load.py
src/sql/: create_raw_stocks_table.py
tests/: test_extract.py
