[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "market-intel"
version = 0.1.0
requires-python=">=3.12"
dependencies = [
    "yfinance",
    "pandas",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv"
]

[tool.setuptools.packages.find]
where=["src"]