[build-system]
requires = ["setuptools >= 61"]
build-backend = "setuptools.build_meta"

[project]
name = "market-intel"
version = "0.1.0"
requires-python=">=3.12"
dependencies = [
    "yfinance==0.2.57",
    "pandas==3.0.3",
    "sqlalchemy==2.0.50",
    "psycopg2-binary==2.9.10",
    "python-dotenv==1.2.1",
    "dbt-core>=1.8,<1.9",
    "dbt-postgres==1.8.2",
]

[tool.setuptools.packages.find]
where=["src"]